Bug 429477 - Can't directly open "Global Theme" KCM anymore
Summary: Can't directly open "Global Theme" KCM anymore
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-11-21 22:21 UTC by Kai Uwe Broulik
Modified: 2020-11-24 12:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2020-11-21 22:21:40 UTC
SUMMARY
Direcetly opening Global Theme KCM doesn't work anymore after recent KCM shuffling to make it a group.

STEPS TO REPRODUCE
1. Run systemsettings5 lookandfeel

OBSERVED RESULT
Systemsettigs opens on main page

EXPECTED RESULT
Systemsettings opens on "Globla Theme" page

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.20.80, git as of 2020-11-21
Comment 1 Nate Graham 2020-11-23 20:38:50 UTC
Hmm, when I try, I'm getting KCMs opening in KCMshell again, which I don't think it intentional...
Comment 2 Marco Martin 2020-11-24 12:07:22 UTC
Git commit 22d58adb13770ed5c04779ea24fb280afff6b73e by Marco Martin.
Committed on 24/11/2020 at 12:07.
Pushed by mart into branch 'master'.

search also in info() if is the module we want

some items that are categories with owning kcms have
d->service->desktopEntryName() is not the name of the owning kcm
in this case the real desktop name of the kcm is item().fileName()

M  +6    -2    core/MenuItem.cpp

https://invent.kde.org/plasma/systemsettings/commit/22d58adb13770ed5c04779ea24fb280afff6b73e