search also in info() if is the module we want

some items that are categories with owning kcms have
d->service->desktopEntryName() is not the name of the owning kcm
in this case the real desktop name of the kcm is item().fileName()

BUG:429477